<resources>
    <string name="app_name">Nature Collection</string>

    <!-- Login and Register page -->
    <string name="login">Connexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="registration_text">S\'inscrire</string>

    <string name="register">Inscription</string>
    <string name="register_button">S\'inscrire</string>
    <string name="connection_text">Se connecter</string>

    <!-- HomePage -->
    <string name="home_page_title">À découvrir</string>
    <string name="home_page_last_plant_section">Dernières plantes</string>
    <string name="email_logged">NatureCollection@gmail.com</string>
    <string name="logout_button">Se déconnecter</string>

    <!-- NavBar -->
    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_collection_item">Collection</string>
    <string name="bottom_add_plant_item">Ajouter</string>

    <!-- CollectionPage -->
    <string name="collection_page_title">Ma collection</string>

    <!-- AddPlantPage -->
    <string name="add_plant_page_title">Ajout d\'une plante</string>
    <string name="add_plant_page_upload_button">Charger Image</string>
    <string name="add_plant_page_name_input">@string/item_plant_name</string>
    <string name="add_plant_page_description_input">@string/item_plant_description</string>
    <string-array name="add_plant_page_grow_spinner_input">
        <item>Croissance : Lente</item>
        <item>Croissance : Moyenne</item>
        <item>Croissance : Rapide</item>
    </string-array>
    <string-array name="add_plant_page_water_spinner_input">
        <item>Consommation : Faible</item>
        <item>Consommation : Moyenne</item>
        <item>Consommation : Élevée</item>
    </string-array>
    <string name="add_plant_page_confirm_button">Confirmer</string>

    <!-- PlantDetailsPopup -->
    <string name="popup_plant_name">Plant Name</string>
    <string name="popup_plant_description_title">Description</string>
    <string name="popup_plant_description">Petite description</string>
    <string name="popup_plant_grow_title">Croissance</string>
    <string name="popup_plant_grow">Lente</string>
    <string name="popup_plant_water_title">Consommation Eau</string>
    <string name="popup_plant_water">Faible</string>


    <!-- Plant Customize -->
    <string name="item_plant_name">Nom de la plante</string>
    <string name="item_plant_description">Description de la plante</string>

</resources>