<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/default_margin"
    tools:context=".Login">

    <TextView
        style="@style/TitleTextStyle"
        android:text="@string/login"
        android:gravity="center"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/DefaultTextStyle"
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/DefaultTextStyle"
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:text="@string/login_button"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/green"
        android:padding="10dp"
        style="@style/TitleTextStyle"
        android:textSize="18sp"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/registerNow"
        android:text="@string/registration_text"
        android:gravity="center"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>