<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/app_title"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/page_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_title"
            android:layout_marginLeft="@dimen/default_margin"
            android:text="@string/home_page_title" />

        <TextView
            android:id="@+id/email_logged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_logged"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/default_margin"
            android:fontFamily="@font/kanit"
            android:textColor="@color/lightGray"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:text="@string/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:textColor="@color/white"
            android:background="@color/green"
            android:padding="10dp"
            style="@style/TitleTextStyle"
            android:textSize="18sp"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/relative_layout"
        app:layout_constraintBottom_toTopOf="@id/navigation_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/green"
        android:theme="@style/BottomNavigatonStyle"
        app:itemIconTint="@drawable/bottom_nav_color"
        app:itemTextColor="@drawable/bottom_nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

  </androidx.constraintlayout.widget.ConstraintLayout>
